# jd-agent

./: .dockerignore  .env.example  .env.local.docker.example  .gitignore  .railwayignore  BACKLOG.md  CLAUDE.md  COMPREHENSIVE-TEST-REPORT.md  DEPRECATED.md  Dockerfile  FEATURES.md  IMPLEMENTATION_GUIDE.md  MIGRATION_PROGRESS.md  MIGRATION_SETUP.md  PHASE0-COMPLETE.md  PHASE0-DEPLOYED.md  PHASE3_TUTORIAL.md  QUICK-START-PHASE0.md  README.md  STATUS_REPORT.md  TUTORIAL.md  claude-code-prompt.md  docker-compose.yml  jd-agent-roadmap-v2.md  jd-agent-roadmap-v3.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-all.sh  sync-remarkable-full.ts  sync-remarkable.ts  test-apple-batch.ts  test-apple-debug.ts  test-apple-notes-extract.sh  test-remarkable-sync.ts  test-todoist-quick.ts  test-todoist-rest-v2.ts  test-todoist-sync-api.ts  test-todoist-v2-quick.ts
.railway/: config.toml
apps/vault/src-tauri/: Cargo.toml  tauri.conf.json
apps/vault/src-tauri/capabilities/: default.json
apps/vault/src-tauri/icons/: icon.icns
apps/vault/src-tauri/src/: lib.rs  main.rs
docs/: vip-pipeline.md
hub/: .env.example  .env.production.example  .env.staging.example  Dockerfile  WHOOP_SETUP.md  debug-search.ts  nixpacks.toml  package.json  railway.json  test-case-detection.cjs  test-detection-v2.cjs  test-direct-search.ts  test-final-detection.cjs  test-improved-detection.cjs  test-search-index.ts  test-service-search.ts  tsconfig.json  vitest.config.ts
scripts/: backup-database.sh  init-db.sql  install-command-center-app.sh  install-launchd.sh  local-start.sh  setup-tunnel.sh  (+4 more)
(+1323 files in other folders)
