[package]
name = "jd-vault"
version = "0.1.0"
description = "JD Vault - Personal knowledge base"
authors = ["JD Agent"]
edition = "2021"
build = "build.rs"

[lib]
name = "jd_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-haptics = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "ios")'.dependencies]
tauri = { version = "2", features = ["wry"] }

